<resources>
    <string name="app_name">My Application</string>
<!--    String values for Main Activity-->
    <string name="welcome">Welcome to Yuxiao Song and Zhengliang Wang\'s Game</string>
    <string name="logo_description">University of Ottawa</string>
    <string name="btn_next">Next</string>

<!--    String values for Game Menu-->
    <string name="btn_quizGame">Quiz Game</string>
    <string name="btn_countSheep">Counting Game</string>
    <string name="btn_showScore">Show Score</string>
    <string name="btn_back2Welcome">Back to Welcome</string>
<!--    String values for Quiz Game-->
    <string name="title_quiz">Quiz Game</string>
    <string name="quizGameDescription">You will be given 5 multiple choice questions</string>
    <string name="btn_addQuestion">Add Question</string>
    <string name="btn_startQuiz">Start Quiz</string>
    <string name="btn_submit">Submit</string>

    <string-array name="q1">
        <item>Who is the antagonist in the Avengers: Infinity war?</item>
        <item>Iron man</item>
        <item>Thanos</item>
        <item>Scarlet Witch</item>
        <item>Ultron</item>
        <item>Thanos</item>
    </string-array>

    <string-array name="q2">
        <item>Who is the captain in the Pirates of the Caribbean?</item>
        <item>Will Turner</item>
        <item>Elizabeth Swann</item>
        <item>Hector Barbossa</item>
        <item>Jack Sparrow</item>
        <item>Jack Sparrow</item>
    </string-array>

    <string-array name="q3">
        <item>The code in The Matrix comes from what food recipes?</item>
        <item>Sushi recipes</item>
        <item>Dumpling recipes</item>
        <item>Stir-fry recipes</item>
        <item>Pad thai recipes</item>
        <item>Sushi recipes</item>
    </string-array>

    <string-array name="q4">
        <item>Who actually drew the sketch of Rose in Titanic?</item>
        <item>Leonardo DiCaprio</item>
        <item>Billy Zane</item>
        <item>James Cameron</item>
        <item>Kathy Bates</item>
        <item>James Cameron</item>
    </string-array>

    <string-array name="q5">
        <item>Where were The Lord of the Rings movies filmed?</item>
        <item>Ireland</item>
        <item>Iceland</item>
        <item>New Zealand</item>
        <item>Australia</item>
        <item>New Zealand</item>
    </string-array>

    <string-array name="q6">
        <item>Who did the cat in The Godfather belong to?</item>
        <item>Francis Ford Coppola</item>
        <item>Diane Keaton</item>
        <item>Al Pachino</item>
        <item>No one—the cat was a stray</item>
        <item>No one—the cat was a stray</item>
    </string-array>

    <string-array name="q7">
        <item>What item is in every Fight Club scene?</item>
        <item>A Coca-Cola can</item>
        <item>A Starbucks cup</item>
        <item>A Dunkin’ donut</item>
        <item>A Pepsi bottle</item>
        <item>A Starbucks cup</item>
    </string-array>

</resources>