<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/btnQuizGame"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="64dp"
        android:text="@string/btn_quizGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnCountSheep"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btn_countSheep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuizGame" />

    <Button
        android:id="@+id/btnShowScore"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btn_showScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCountSheep"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="253dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248"
        app:srcCompat="@drawable/logo_uottawa" />


</androidx.constraintlayout.widget.ConstraintLayout>